--- a/publish/session/1.md
+++ b/publish/session/1.md
@@ -11,7 +11,7 @@ excerpt: "/md_assets/attachments/session1.jpg"
 
 Пора було вирушати на пошуки провідника. На площі зібралося безліч людей, але їхню увагу привернув силует, який швидко зник за рогом. Вони кинулися слідом, проте, повернувши за ріг, не знайшли його – лише кілька перехожих. Розпитавши їх, герої отримали допомогу від дівчинки, яка єдина також бачила силует. Вона розповіла, що таємнича постать їй посміхнулася і сказала:  
 
->"Для тебе ще не час".
+>Для тебе ще не час.
 
 Дівчинка вказала напрямок, куди пішов силует, і герої рушили слідом. Незабаром вони побачили, як таємнича постать безперешкодно пройшла крізь двері. Відкривши їх, герої опинилися в іншому вимірі.
 
