--- a/publish/session/3.md
+++ b/publish/session/3.md
@@ -3,8 +3,9 @@ title: "Сессія 3"
 excerpt: "/md_assets/attachments/session3.jpg"
 ---
 
-Гравці отримують нове завдання:
->Вирушайте в [[mornheym|Морнхейм]], столицю [[ragmorn|Рагморну]]. Капітан Світової Гвардії — обраний, як і ви — вже чекає на вас.
+Гравці отримують нове завдання:  
+
+> Вирушайте в [[mornheym|Морнхейм]], столицю [[ragmorn|Рагморну]]. Капітан Світової Гвардії — обраний, як і ви — вже чекає на вас.
 
 ##### Дорога до столиці
 
@@ -38,7 +39,7 @@ excerpt: "/md_assets/attachments/session3.jpg"
 
 Гравці намагаються розговорити їх, але справа не обходиться без погроз. У результаті хлопці погоджуються поділитися інформацією, але тільки якщо гравці виграють у гру.
 
-Благодаря До’ві гра була безпрограшною. Один із хлопців нервово зітхає і каже:
+Завдяки До’ві гра була безпрограшною. Один із хлопців нервово зітхає і каже:
 
 >Накази надходять телепатично. Вони завжди точні. Якщо згадати старі історії… це тюрма [[bezodnya|“Безодня”]]…
 
