--- a/publish/session/2.md
+++ b/publish/session/2.md
@@ -26,10 +26,10 @@ excerpt: "/md_assets/attachments/session2.jpg"
 ##### Випробування лабіринту
 
 Стежка вела до входу в лабіринт. Це виявилося справжнім випробуванням: вони втрачали орієнтацію, не мали єдиного лідера, а відсутність чіткої мети збивала їх із шляху.  
-Рейдіс знайшов дитину та погодився допомогти їй, але дитина весь час дратувала його, тільки новий друг бурсук зміг заспокоїти.  
-Кіаран пожертвував(ла) рукою, щоб отримати карту лабіринту.  
-Чогорі боровся з загадкою каменів, яка виявилася складнішою, ніж здавалося.  
-Жінка-примара, що вічно шукала уваги, прив’язалася до Чогорі, але заспокоїти її зміг(ла) лише Кіаран.  
+[[raydis|Рейдіс]] знайшов дитину та погодився допомогти їй, але дитина весь час дратувала його, тільки новий друг бурсук зміг заспокоїти.  
+[[kiaran|Кіаран]] пожертвував(ла) рукою, щоб отримати карту лабіринту.  
+[[chogori-o|Чогорі]] боровся з загадкою каменів, яка виявилася складнішою, ніж здавалося.  
+Жінка-примара, що вічно шукала уваги, прив’язалася до [[chogori-o|Чогорі]], але заспокоїти її зміг(ла) лише [[kiaran|Кіаран]].  
 
 Зрештою вони зібрали всі руни, необхідні для відновлення магічного вівтаря. Щойно той активувався, перед ними знову з’явився Провідник.  
 
