--- a/publish/session/3.md
+++ b/publish/session/3.md
@@ -39,7 +39,7 @@ excerpt: "/md_assets/attachments/session3.jpg"
 
 Гравці намагаються розговорити їх, але справа не обходиться без погроз. У результаті хлопці погоджуються поділитися інформацією, але тільки якщо гравці виграють у гру.
 
-Завдяки До’ві гра була безпрограшною. Один із хлопців нервово зітхає і каже:
+Завдяки [[dova|До’Ві]] гра була безпрограшною. Один із хлопців нервово зітхає і каже:
 
 >Накази надходять телепатично. Вони завжди точні. Якщо згадати старі історії… це тюрма [[bezodnya|“Безодня”]]…
 
@@ -53,11 +53,11 @@ excerpt: "/md_assets/attachments/session3.jpg"
 
 Проте [[neyra-morn|Нейра]] передає телепатичне повідомлення [[raydis|Рейдісу]]:
 
->Знайдіть скарб у складі і розкажіть Морнхейму правду.
+>Знайдіть скарб у складі і розкажіть [[mornheym|Морнхейму]] правду.
 
 ##### Секрет у сховищі
 
-Гравці вирушають у склад і знаходять дивний механізм. Його можна відкрити лише ключем, який Кіаран запам’ятав(ла), побачивши татуювання Нейри.
+Гравці вирушають у склад і знаходять дивний механізм. Його можна відкрити лише ключем, який [[kiaran|Кіаран]] запам’ятав(ла), побачивши татуювання [[neyra-morn|Нейри]].
 
 Скриня всередині містить:  
 *Сокиру підкорення*  
